--- a/README
+++ b/README
@@ -1,5 +1,8 @@
-This readme is mostly a test to see if we can get a repository working correctly.
+***********************************************************************************************
 
-Chris Groce
-Kevin McGinn
-Nick Taylor
+TOWER DEFENSE
+
+A Game for ND++
+Chris Groce, Kevin McGinn, Nick Taylor
+
+********************************************************************************
