made small clarification in README

--- a/README
+++ b/README
@@ -18,7 +18,8 @@ INSTALLATION:
 
 Using the provided executable:
 
-Download the Tower-Defense executable from the GitHub repository
+Download the Tower-Defense executable from the GitHub repository's download 
+page
 Run the executable and enjoy!
 
 Compiling from source code in Linux:
